if(NOT CPPREST_EXCLUDE_HTTP_NARROW_STRING_WIP)
add_subdirectory(http)
endif()
add_subdirectory(json)
add_subdirectory(pplx)
add_subdirectory(streams)
if(NOT CPPREST_EXCLUDE_HTTP_NARROW_STRING_WIP)
add_subdirectory(uri)
endif()
add_subdirectory(utils)
if(NOT CPPREST_EXCLUDE_HTTP_NARROW_STRING_WIP)
add_subdirectory(websockets)
endif()
